--- a/SquareCalculatorTests/AreaCalculatorTests.csproj
+++ b/SquareCalculatorTests/AreaCalculatorTests.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SquareCalculator\SquareCalculator.csproj" />
+    <ProjectReference Include="..\SquareCalculator\AreaCalculator.csproj" />
   </ItemGroup>
 
 </Project>
